# autopilot

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-linux.yml
cmake/: autopilotConfig.cmake.in  eigen_source_build_tweaks.cmake
docs/: flatness.tex
examples/: CMakeLists.txt
examples/config/: cascade_controller_sim.json
examples/include/examples/: visualization.hpp
examples/src/: cascade_controller_sim.cpp  format_types.cpp  visualization.cpp
include/autopilot/: async_estimator.hpp  base.hpp  cascade_controller.hpp  common.hpp  controller_base.hpp  definitions.hpp  eskf.hpp  estimator_base.hpp  expected.hpp  factory.hpp  geometric_controller.hpp  geometry.hpp  math.hpp  module.hpp  quadrotor_model.hpp  quadrotor_simulator.hpp  sensor_data.hpp  sensors.hpp
include/autopilot/base/: config_base.hpp  controller_base.hpp  estimator_base.hpp  factory.hpp  module.hpp
include/autopilot/controllers/: attitude_error.hpp  cascade_controller.hpp  geometric_controller.hpp  ilqc.hpp  pid.hpp  pid_attitude_controller.hpp
include/autopilot/core/: butterworth_filter.hpp  common.hpp  definitions.hpp  geometry.hpp  integrator.hpp  math.hpp  pretty_printer.hpp  quadrotor_model.hpp
include/autopilot/estimators/: async_estimator.hpp  ekf.hpp  eskf.hpp  estimator_core.hpp  estimator_driver_base.hpp  sensor_data.hpp
include/autopilot/extensions/: json_loader.hpp  pretty_printer.hpp
include/autopilot/planning/: flatness_map.hpp  minimum_snap_solver.hpp  mission.hpp  polynomial.hpp  polynomial_trajectory.hpp  preset_trajectories.hpp  sampler_base.hpp  time_sampler.hpp  trajectory.hpp
include/autopilot/simulator/: quadrotor_simulator.hpp  sensors.hpp
src/: async_estimator.cpp  attitude_error.cpp  cascade_controller.cpp  definitions.cpp  ekf.cpp  eskf.cpp  flatness_map.cpp  geometric_controller.cpp  json_loader.cpp  minimum_snap_solver.cpp  mission.cpp  pid.cpp  pid_attitude_controller.cpp  polynomial_trajectory.cpp  preset_trajectories.cpp  pretty_printer.cpp  quadrotor_model.cpp  quadrotor_simulator.cpp  sensors.cpp  time_sampler.cpp  trajectory.cpp
tests/: CMakeLists.txt
tests/include/testing/: matchers.hpp  mock_factory.hpp
tests/src/integration/: test_cascade_controller_sim.cpp  test_mission_execution.cpp  test_trajectory_execution.cpp
tests/src/testing/: mock_factory.cpp
tests/src/unit/: test_angles.cpp  test_attitude_error.cpp  test_butterworth_filter.cpp  test_config_loader.cpp  test_factory.cpp  test_heading_policy.cpp  test_minimum_snap_solver.cpp  test_mission_system.cpp  test_polynomial.cpp  test_quadrotor_model.cpp  test_spatial_rotations.cpp
validation/: CMakeLists.txt
validation/include/validation/: mission_runner.hpp
validation/src/: mission_runner.cpp
